# effective-python-notes

./: .pre-commit-config.yaml  NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/effective/: __init__.py
src/effective/chap01/: __init__.py  item009.py
tests/: test_chap01.py  test_setup.py
